--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "name": "LineBotTemplate",
   "description": "Line Bot API template",
-  "repository": "https://github.com/kkdai/LineBotTemplate",
+  "repository": "https://github.com/chakkritu/LineBotTemplate",
   "keywords": ["Line", "go", "static"],
   "buildpacks": [
     {
-      "url": "https://github.com/kr/heroku-buildpack-go.git"
+      "url": "https://github.com/chakkritu/gitrepo.git"
     },
     {
       "url": "heroku/go"
